update section color

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 			<!-- DESCRIPTION
 			================================= -->
-			<section id="about" class="about-section section">
+			<section id="about" class="about-section section-gray section">
 
 				<div class="container">
 
@@ -242,7 +242,7 @@
 
 						<!-- DESCRIPTION TEXT -->
 						<div class="about-text col-md-6">
-							<p class="lead" style="font-size: 18px;">Le Hacking Industry Camp est un hackathon dédié à l’industrie, un évènement destiné à bousculer les idées et à faire émerger de nouveaux projets. Des équipes aux divers talents s’affrontent pendant tout un week-end pour concevoir des prototypes d’applications, d’objets connectés… C’est un espace-temps où les communautés se croisent et fourmillent d’idées avec pour objectif l’innovation !</p>
+							<p class="lead" style="font-size: 18px;padding-top: 0;">Le <strong>Hacking Industry Camp par <a href="http://alsacedigitale.org/" target="_blank">Alsace Digitale</a></strong> est un hackathon dédié à l’industrie, un évènement destiné à bousculer les idées et à faire émerger de nouveaux projets. Des équipes aux divers talents s’affrontent pendant tout un week-end pour concevoir des prototypes d’applications, d’objets connectés… C’est un espace-temps où les communautés se croisent et fourmillent d’idées avec pour objectif l’innovation !</p>
 							<ul class="icon-list">
 								<li>
 									<span class="icon-list-icon fa fa-hand-o-up" data-animation="bounceIn"></span>
@@ -335,7 +335,7 @@
 
 			</section>
 
-			
+
 
 			<section id="closing" class="closing-section section-dark section">
 
