--- a/index.html
+++ b/index.html
@@ -169,6 +169,29 @@
 								</div>
 							</div> -->
 
+							<div class="newsbox col-md-10 col-md-offset-1">
+								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 07/09 et 14/09</div>
+								Pour cette deuxième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
+								Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
+								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>
+								<div class="row" style="margin-bottom: 15px;">
+									<div class="col-md-6">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-1-tickets-36611875104" target="_blank">07/09 à 9h à la Fédération des Industries d'Alsace</a>
+									</div>
+									<div class="col-md-6">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-2-episode-1-tickets-37289096692" target="_blank">07/09 à 17h</a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-6">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-2-tickets-37289341424" target="_blank">14/09 à 9h chez ES</a>
+									</div>
+									<div class="col-md-6">
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-saison-2-episode-2-37289498895">14/09 à 17h chez Socomec</a>
+									</div>
+								</div>
+							</div>
+
 							<div class="hero-features row" style="margin-top: 45px;">
 
 								<div class="hero-features-left col-md-6">
