--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 							<div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 07/09 et 14/09</div>
-								Pour cette deuxième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
+								Pour cette troisième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
 								Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
 								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>
 								<div class="row" style="margin-bottom: 15px;">
