--- a/index.html
+++ b/index.html
@@ -1097,14 +1097,22 @@
 						<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
 						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>
 					</div>
+
+					<div class="sponsors-row" data-animation="bounceIn">
+						<h3 style="font-size: 17px;">Bronze Sponsors</h3><br>
+						<a href="http://orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
+						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
+						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
+						<a href="https://its-future.com/" target="_blank"><img src="images/contents/its.png" alt="its future"></a>
+						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
+
+					</div>
 					
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Ces entreprises / associations / institutions soutiennent l'événement</h3><br>
 						<a href="http://www.alsacetech.org/" target="_blank"><img src="images/contents/alsacetech.jpg" alt="Alsace Tech" style="width: 220px;"></a>
 						<a href="http://www.creaccro.eu/" target="_blank"><img src="images/contents/accro.jpg" alt="Accro"></a>
 						<a href="http://alsace.com/" target="_blank"><img src="images/contents/aaa.jpg" alt="Agence Attractivité Alsace"></a>
-						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
-						<a href="http://orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
 						<a href="http://lafab.org" target="_blank"><img src="images/contents/lafabrique.jpg" alt="La Fabrique"></a>
 						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img src="images/contents/fta-iot-manufacturing.png" alt="La French Tech Alsace"></a>
 						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
@@ -1113,7 +1121,6 @@
 						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
 						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
 						<a href="http://duipi.unistra.fr/" target="_blank"><img src="images/contents/ipi.png" alt="IPI"></a>
-						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://innovationweek.fr/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>
 						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
 						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
