--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-1-tickets-36611875104" target="_blank">07/09 à 9h à la Fédération des Industries d'Alsace</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-2-episode-1-tickets-37289096692" target="_blank">07/09 à 17h (lieu à confirmer)</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-2-episode-1-tickets-37289096692" target="_blank">07/09 à 17h chez Hager</a>
 									</div>
 								</div>
 								<div class="row">
