--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-1-tickets-36611875104" target="_blank">07/09 à 9h à la Fédération des Industries d'Alsace</a>
+										<a class="btn btn-default" disabled="disabled" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-1-tickets-36611875104" target="_blank">07/09 à 9h à la Fédération des Industries d'Alsace</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-2-episode-1-tickets-37289096692" target="_blank">07/09 à 17h chez Hager</a>
+										<a class="btn btn-default" disabled="disabled" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-2-episode-1-tickets-37289096692" target="_blank">07/09 à 17h chez Hager</a>
 									</div>
 								</div>
 								<div class="row">
