--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 								</div>
 							</div> -->
 
-							<div class="newsbox col-md-10 col-md-offset-1">
+							<!--<div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 07/09 et 14/09</div>
 								Pour cette troisième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
 								Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
@@ -190,7 +190,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-saison-2-episode-2-37289498895">14/09 à 17h chez Socomec</a>
 									</div>
 								</div>
-							</div>
+							</div>-->
 
 							<div class="hero-features row" style="margin-top: 45px;">
 
@@ -1104,6 +1104,7 @@
 						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
 						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="https://its-future.com/" target="_blank"><img src="images/contents/its.png" alt="its future"></a>
+						<a href="http://www.agoracalyce.com/" target="_blank"><img src="images/contents/agora.png" alt="Agora Calycé"></a>
 						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
 
 					</div>
