--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@
 							</div>
 
 
+							<div class="newsbox col-md-10 col-md-offset-1">
+								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-bullhorn"></i> &nbsp;Besoin de conseils pour pitcher votre projet ?</div>
+								<div class="row" style="margin-bottom: 15px;">
+									<div class="col-md-6">									
+										<a class="btn btn-default" style="width: 100%;" href="https://fr.slideshare.net/LaPlageDigitale/8-conseils-pour-pitcher-comme-un-dieupptx/" target="_blank">8 conseils pour pitcher comme un dieu</a>
+									</div>
+									<div class="col-md-6">									
+										<a class="btn btn-default" style="width: 100%;" href="http://hic2017.sparkboard.com/" target="_blank">Déposer mon projet sur le sparkboard</a>
+									</div>
+								</div>
+							</div>
+
 							<!-- <div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Événements organisés par nos partenaires (gratuits mais sur inscription)</div>
 								<div class="row" style="margin-bottom: 15px;">
