--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
 
 								<div class="hero-features-left col-md-6">
 
-									<!--<div class="video-embed">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/5Z1KPs0cAYQ" frameborder="0" allowfullscreen></iframe>
-									</div>-->
-									<img src="images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">
+									<div class="video-embed">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/uTIIgWLHLAc" frameborder="0" allowfullscreen></iframe>
+									</div>
+									<!--<img src="images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">-->
 
 									<p class="lead"> <strong>Du 13 au 15 octobre 2017</strong> <br>La troisième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0
 									<span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
@@ -423,9 +423,9 @@
 										A <strong>hackathon</strong> (also known as a hack day, hackfest or codefest) is an event in which computer programmers and others involved in software development and hardware development, including graphic designers, interface designers and project managers, collaborate intensively on software projects. Occasionally, there is a hardware component as well.
 									</p>
 
-									<div class="col-md-12 text-center" style="margin-bottom: 20px;">
+									<!--<div class="col-md-12 text-center" style="margin-bottom: 20px;">
 										<div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="https://www.facebook.com/alsace.digitale/videos/1168785789802934/"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/alsace.digitale/videos/1168785789802934/"><a href="https://www.facebook.com/alsace.digitale/videos/1168785789802934/">Encouragement Gilles Babinet HICamp www.hackingindustry.camp</a><p>#Gift les encouragements de  Gilles Babinet pour le Hacking industry Camp ! On adore.</p>Posted by <a href="https://www.facebook.com/alsace.digitale">Alsace Digitale</a> on Friday, October 2, 2015</blockquote></div></div>
-									</div>
+									</div>-->
 
 
 									<div class="col-md-12">
