--- a/index.html
+++ b/index.html
@@ -489,13 +489,13 @@
 
 			</section>
 
-			<!--<section id="planning" class="section">
+			<section id="planning" class="section">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Consulter le planning complet</a></div>
 					</div>
 				</div>
-			</section>-->
+			</section>
 
 			<!--<section id="keynotes" class="section section-dark">
 				
