--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 									<h1 class="hero-title">Hacking Industry Camp</h1>
 
-									<p class="hero-tagline">54h pour stimuler l'innovation</p>
+									<p class="hero-tagline">Du 13 au 15 octobre 2017 à l'INSA Strasbourg</p>
 
 								</div>
 
@@ -213,7 +213,7 @@
 									</div>
 									<!--<img src="images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">-->
 
-									<p class="lead"> <strong>Du 13 au 15 octobre 2017</strong> <br>La troisième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0
+									<p class="lead"> <strong>54h pour stimuler l'innovation</strong> <br>La troisième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0
 									<span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
 										<strong>Jetez un coup d'oeil aux éditions précédentes : </strong> 
 										<a href="http://2015.hackingindustry.camp/" target="_blank">2015</a> - 
