--- a/index.html
+++ b/index.html
@@ -774,6 +774,16 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/alexis-martin.jpg" alt="Alexis MARTIN">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Alexis MARTIN</h4>
+							<div class="team-member-position">INPI</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Johann MICHEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Johann MICHEL</h4>
@@ -783,7 +793,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Axel NEVEUX</h4>
@@ -793,7 +803,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
 					
 						<div class="team-member-text">
@@ -804,7 +814,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Florence REMY</h4>
@@ -814,7 +824,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/bestien-stella.jpg" alt="Bastien STELLA">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Bastien STELLA</h4>
@@ -822,6 +832,10 @@
 						</div>
 					</div>
 				</div>
+
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -833,12 +847,8 @@
 					</div>
 				</div>
 
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">
-
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
@@ -1135,7 +1145,8 @@
 						<h3 style="font-size: 17px;">Silver Sponsors</h3><br>
 						<a href="http://www.caisse-epargne.fr/" target="_blank"><img src="images/contents/caisse-epargne.jpg" alt="Caisse d'Epargne Alsace"></a>						
 						<a href="http://www.hagergroup.com/" target="_blank"><img src="images/contents/hager-group.png" alt="Hager"></a>				
-						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>					
+						<a href="http://www.rhenatic.eu/" target="_blank"><img src="images/contents/rhenatic.png" alt="Rhénatic" style="width: 180px;"></a>
+						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
 						<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
 						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>
@@ -1143,9 +1154,7 @@
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Bronze Sponsors</h3><br>
-						<a href="http://orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
 						<a href="http://scalingo.com" target="_blank"><img width="220" src="images/contents/scalingo.svg" alt="Scalingo"></a>
-						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 15px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="https://its-future.com/" target="_blank"><img src="images/contents/its.png" alt="its future"></a>
 						<a href="http://www.agoracalyce.com/" target="_blank"><img src="images/contents/agora.png" alt="Agora Calycé"></a>
 						<a href="https://www.thurmelec.fr/" target="_blank"><img src="images/contents/thurmelec.jpg" alt="thurmelec"></a>
