--- a/index.html
+++ b/index.html
@@ -1183,6 +1183,7 @@
 						<!--<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
 						<!--<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>-->
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
+						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
 						<a href="http://www.reck.fr/" target="_blank"><img src="images/contents/cafe-reck.jpg" alt="Cafés Reck"></a>
 						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/pepite.jpg" alt="Pepite"></a>-->
 						<!--<a href="http://www.etena-univ.eu/" target="_blank"><img src="images/contents/etena.jpg" alt="Etena"></a><br>-->
