--- a/index.html
+++ b/index.html
@@ -720,10 +720,10 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
+						<img class="team-member-picture" src="images/contents/coach/marie-hunyadi.jpg" alt="Marie HUNYADI">
 						<div class="team-member-text">
-							<h4 class="team-member-name">Yannick JOST</h4>
-							<div class="team-member-position">Strataggem - Objets connectés</div>
+							<h4 class="team-member-name">Marie HUNYADI</h4>
+							<div class="team-member-position">Communication digitale</div>
 						</div>								
 					</div>
 				</div>
@@ -738,16 +738,6 @@
 						<div class="team-member-text">
 							<h4 class="team-member-name">Franck HOONAKKER</h4>
 							<div class="team-member-position">Croissanceo</div>
-						</div>								
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/marie-hunyadi.jpg" alt="Marie HUNYADI">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Marie HUNYADI</h4>
-							<div class="team-member-position">Communication digitale</div>
 						</div>								
 					</div>
 				</div>-->
@@ -770,7 +760,27 @@
 							<div class="team-member-position">Coach développement et électronique</div>
 						</div>
 					</div>
-				</div>-->	
+				</div>-->
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Yannick JOST</h4>
+							<div class="team-member-position">Strataggem - Objets connectés</div>
+						</div>								
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Fabrice LIEGEY">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Fabrice LIEGEY</h4>
+							<div class="team-member-position">Lean et innovation</div>
+						</div>
+					</div>
+				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
@@ -813,8 +823,12 @@
 					</div>
 				</div>
 
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Florence REMY</h4>
@@ -824,7 +838,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/bestien-stella.jpg" alt="Bastien STELLA">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Bastien STELLA</h4>
@@ -833,9 +847,6 @@
 					</div>
 				</div>
 
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -1345,6 +1356,8 @@
 			<section id="footer" class="footer-section section">
 
 				<div class="container">
+
+					<img src="images/contents/upper-rhein.jpg" alt=""><br>
 
 					<h3 class="footer-hashtag">
 						#HICamp
