--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#how-it-works">Déroulement</a></li>
-							<!--<li><a href="#keynotes">Keynotes</a></li>-->
+							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs</a>
 							<!--<li><a href="#prizes">Prix</a>
 							<li><a href="#winners">Résultats</a>-->
@@ -497,7 +497,7 @@
 				</div>
 			</section>
 
-			<!--<section id="keynotes" class="section section-dark">
+			<section id="keynotes" class="section section-dark">
 				
 				<div class="section-background">
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
@@ -511,56 +511,81 @@
 					<p class="col-md-12 text-center">Des keynotes gratuites et <strong>ouvertes au public</strong></p>
 
 					<div class="row">
-						<div class="about-text col-md-6">
+						<div class="about-text col-md-4">
 							<h3>Samedi 15 octobre de 11h à 12h</h3>
-							<img src="images/contents/keynote-industrie4-0.jpg" style="width: 100%;" alt="Keynote Fablab" title="Keynote Industrie 4.0 : une utopie allemande ?" />
+							<img src="images/contents/keynote-industrie4-0.jpg" style="width: 100%;" alt="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" title="Keynote de Jean-Claude Noben, Directeur Régional Wallonie Sirris" />
 
-							<h3>Industrie 4.0 : une utopie allemande ?</h3>
+							<h3>Made Different : préparer les entreprises à l'industrie 4.0</h3>
 							
 							<div class="lead">
-								<p style="font-size: 18px;">Dès l’origine, Industrie 4.0 se présente comme un rêve technologique : une application de l’internet des objets au monde des biens d’équipement. Le projet Industrie 4.0 vise ni plus ni moins à dessiner les contours d’une 4ème révolution industrielle portée par la vision d’une mise en réseau de tous les éléments du processus de production pour construire l’usine ultra-connectée du futur, baptisée integrated industry, smart factory ou encore digital factory.</p>
-								<div class="read_more">
+								<p style="font-size: 18px;">Fort de ses 30 ans d'expérience dans l'industrie en tant que chef de projet, superviseur pour l'industrialisation et directeur technique pour une PME, Jean-Claude a rejoint Sirris en 2006. L’une des missions confiées à M. Noben pour ce centre de recherche consiste à préparer les entreprises à l’industrie 4.0, via le programme Made Different qu'il nous présentera. Made Different Digital Wallonia est un programme de sensibilisation et d’accompagnement des entreprises industrielles wallonnes dans leur transformation à l’industrie 4.0.</p>
+								<!--<div class="read_more">
 									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
 									<div class="read_more_content">
 										<p>À travers ses expériences, Jean-Daniel Weisz, associé du Cabinet KOHLER C&amp;C propose des clés pour comprendre comment l’État et les industries allemandes s'adaptent à la numérisation des processus industriels. En constatant que le changement fait aujourd'hui partie intégrante de la dynamique d'entreprise, celui-ci n'est plus perçu comme une phase d'incertitude, mais est conçu comme un avantage compétitif qui crée de la valeur. En France sommes-nous prêts à de telles modifications ? Pouvons-nous saisir cette opportunité de différenciation conjointement avec nos voisins d'Outre-Rhin ?<br>Le cabinet Kohler C&amp;C, experts en stratégie de transformation et en développement des organisations a publié en mars 2016 l’ouvrage « Industrie 4.0 – Les défis de la transformation numérique du modèle industriel allemand » à la documentation Française.</p>
 									</div>
-								</div>
+								</div>-->
 							</div>
-							<p style="margin-bottom: 0;">Présentée par Jean-Daniel Weisz, associé du <a href="http://kohler-cc.com/industrie-4-0/" target="_blank">Cabinet Kohler C&amp;C</a></p>
-							<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 40px;" src="images/contents/adira.png" alt="Adira"></a></p>
+							<p style="margin-bottom: 0;">Présentée par Jean-Claude Noben, Directeur Régional Wallonie Sirris</p>
+							<!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 40px;" src="images/contents/adira.png" alt="Adira"></a></p>-->
 
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="http://www.eventbrite.com/e/conference-1-hacking-industry-camp-lindustrie-4o-une-utopie-allemande-tickets-27727464593" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-jean-claude-noben-directeur-regional-wallonie-sirris-38448525575" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
-						<div class="about-text col-md-6">
-							<h3>Samedi 15 octobre de 17h à 18h</h3>
+						<div class="about-text col-md-4">
+							<h3>Samedi 15 octobre de 15h à 16h</h3>
 
-							<img src="images/contents/keynote-oser-innover.jpg" style="width: 100%;" alt="Keynote Usine 4.0" title="Keynote Oser innover" />
+							<img src="images/contents/keynote-blockchain.jpg" style="width: 100%;" alt="La blockchain un véritable levier pour l’industrie" title="La blockchain un véritable levier pour l’industrie" />
 
-							<h3>Oser innover</h3>
+							<h3>La blockchain, un véritable levier pour l’industrie ?</h3>
 
 							<div class="lead">
-								<p style="font-size: 18px;">« Comment jauger une idée, comment s'en emparer, comment trouver les bons soutiens, la bonne structuration... », voilà la ligne directrice de ce passionné de sciences et d'informatiques devenu entrepreneur. </p>
-								<div class="read_more">
+								<p style="font-size: 18px;">La technologie blockchain* offre de nombreuses opportunités pour le monde de l'industrie. En permettant l’automatisation distribuée des transactions, la blockchain change la façon de "faire des affaires", les relations fournisseurs – clients- sous-traitants, en les centrant sur la confiance. Les premières applications, crypto monnaies ou assurances, font aujourd’hui place à des expérimentations dans bien d’autres domaines comme la distribution d’énergie ou la supply chain. Quels sont ces nouveaux champs d’investigation ? Comment être confiant dans cette nouvelle Technologie ?
+								</p>
+								<!--<div class="read_more">
 									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
 									<div class="read_more_content">
 										<p>Après avoir occupé plusieurs postes aux diverses responsabilités dans de grandes entreprises et avoir créer sa propre entreprise, il entre en 2014 à l'Inria, établissement de recherche dédié aux sciences du numérique. Il y exercera en tant que chargé des partenariats et de la propriété intellectuelle jusqu'à récemment. Suite à la campagne « Horizon Start-up » de 2015, organisée par l'Inria et qui avait pour objectif d'attirer l'attention des chercheurs vers la création d'entreprise, Arnaud Laprévote décide lui aussi de se lancer dans l'aventure entrepreneuriale en créant début 2016, Lybero.net. Ce système innovant qui permet de protéger des données par une technologie de chiffrement contenant une clé de recouvrement à seuil, sonnera peut-être le glas de la cybercriminalité.</p>
 									</div>
+								</div>-->
+							</div>
+							<p>
+								Keynote de Pierre Banzet et Franck Augustin de la société Transchain<br>
+							</p>
+							<!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>-->
+
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-keynote-hic-au-dela-de-la-speculation-la-blockchain-un-veritable-levier-pour-lindustrie-38491329603" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+						</div>
+
+						<div class="about-text col-md-4">
+							<h3>Samedi 15 octobre de 17h à 18h</h3>
+
+							<img src="images/contents/keynote-agilite.jpg" style="width: 100%;" alt="L'agilité dans l’innovation managériale" title="L'agilité dans l’innovation managériale" />
+
+							<h3>L'agilité dans l’innovation managériale</h3>
+
+							<div class="lead">
+								<p style="font-size: 18px;">De grands défis attendent l’entreprise 4.0. Elle devra être connectée et agile ! Scandé comme un dogme, dans cette interpellation, chacun y voit midi à sa porte et se lance dans le changement avec enthousiasme ou sous la contrainte. Les PME sont-elles prêtes à ce changement ? Croient-elles suffisamment en leur puissance inventive pour ne pas subir ? Sommes-nous dans une nouvelle crise de la modernité ? ou dans une Révolution collaborative ?</p>
+								<div class="read_more">
+									<a href="javascript:void(0)" class="read_more_button">En savoir plus</a>
+									<div class="read_more_content">
+										<p>Depuis 2009, Jean-Sébastien Desjonqueres accompagne des projets en conduite de changement des organisations, à la fois auprès d’acteurs privés et d¹institutions à partir de Luxembourg où il réside.</p>
+									</div>
 								</div>
 							</div>
 							<p>
-								Présentée par Arnaud Laprévote, Fondateur de <a href="http://lybero.net" target="_blank">Lybero.net</a><br>
+								Présentée par Jean-Sébastien Desjonqueres<br>
 							</p>
-							<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>
+							<!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>-->
 
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hacking-industry-camp-oser-innover-27727494683" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-lagilite-dans-linnovation-manageriale-38494510116" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
 					</div>
 
 				</div>
 
-			</section>-->
+			</section>
 
 			<!-- TEAM
 			================================= -->
@@ -1353,7 +1378,7 @@
 
 			<!-- FOOTER
 			================================= -->
-			<section id="footer" class="footer-section section">
+			<section id="footer" class="footer-section section">f
 
 				<div class="container">
 
