--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
 									</div>
 								</div>-->
 							</div>
-							<p style="margin-bottom: 0;">Présentée par Jean-Claude Noben, Directeur Régional Wallonie Sirris</p>
-							<!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 40px;" src="images/contents/adira.png" alt="Adira"></a></p>-->
+							<p style="margin-bottom: 0;">Présentée par Jean-Claude Noben, Directeur Régional Wallonie Sirris</p><br>
+							<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://adira.com/" target="_blank"><img style="height: 35px;" src="images/contents/adira.png" alt="Adira"></a></p>
 
 							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-jean-claude-noben-directeur-regional-wallonie-sirris-38448525575" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
@@ -575,9 +575,8 @@
 							</div>
 							<p>
 								Présentée par Jean-Sébastien Desjonqueres<br>
-							</p>
-							<!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>-->
-
+							</p><br>
+							<p>Conférence suivie d'une collation, organisée en partenariat avec &nbsp;<a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>
 							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-lagilite-dans-linnovation-manageriale-38494510116" target="_blank" class="btn btn-primary">J'y vais !</a></div>
 						</div>
 
@@ -1378,7 +1377,7 @@
 
 			<!-- FOOTER
 			================================= -->
-			<section id="footer" class="footer-section section">f
+			<section id="footer" class="footer-section section">
 
 				<div class="container">
 
