update sponsors and coaches

--- a/index.html
+++ b/index.html
@@ -871,9 +871,19 @@
 					</div>
 				</div>
 
-
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/pascal-thisse.jpg" alt="Pascal THISSE">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Pascal THISSE</h4>
+							<div class="team-member-position">Data privacy</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Léo UNBEKANDT</h4>
@@ -883,11 +893,21 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
 							<div class="team-member-position">Strataggem - Objets connectés</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
+							<div class="team-member-position">Fablab INSA</div>
 						</div>
 					</div>
 				</div>
@@ -922,30 +942,6 @@
 					</div>
 				</div>-->
 
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">
-
-				<!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/jean-daniel-weisz.jpg" alt="Jean-Daniel WEISZ">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Jean-Daniel WEISZ</h4>
-							<div class="team-member-position">Business opportunities</div>
-						</div>
-					</div>
-				</div>-->
-
-				
-				<!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
-							<div class="team-member-position">Fablab INSA</div>
-						</div>
-					</div>
-				</div>-->
 			</section>
 
 			<!--<section id="jury" class="team-section section">
@@ -1205,11 +1201,12 @@
 						<a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img style="height: 150px;" src="images/contents/fta2.png" alt="La French Tech Alsace"></a>
 						<a href="http://alsace.cci.fr/" target="_blank"><img src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a>
 						<a href="http://adira.com/" target="_blank"><img src="images/contents/adira.png" alt="Adira"></a>
+						<a href="http://www.alsaceinnovation.eu/" target="_blank"><img src="images/contents/alsaceinnovation.png" alt="Adira"></a>
 						<a href="http://maddyness.com/" target="_blank"><img src="images/contents/maddyness.jpg" alt="Maddyness"></a>
 						<a href="http://www.xfive.be/" target="_blank"><img src="images/contents/xfive.jpg" alt="XFive"></a>
 						<a href="http://cpc-analytics.fr" target="_blank"><img src="images/contents/cpc-analytics.jpg" alt="Cpc Analytics"></a>
 						<a href="http://duipi.unistra.fr/" target="_blank"><img src="images/contents/ipi.png" alt="IPI"></a>
-						<a href="http://innovationweek.fr/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>
+						<a href="http://innovationweek.org/france/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>
 						<a href="http://marque.alsace/" target="_blank"><img src="images/contents/acoeur.png" alt="Marque Alsace"></a>
 						<a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img src="images/contents/strasbourg-etudiants.png" alt="Strasbourg aime ses étudiants"></a>
 						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
