--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 						<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Yan-Erik DECORDE</h4>
-							<div class="team-member-position">Coach perso et business</div>
+							<div class="team-member-position">Business Model Exponentiel</div>
 						</div>
 					</div>
 				</div>
@@ -774,20 +774,10 @@
 							<div class="team-member-position">Développement de projet </div>
 						</div>
 					</div>
-				</div>	
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/frederic-mossmann.jpg" alt="Frédéric MOSSMANN">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Frédéric MOSSMANN</h4>
-							<div class="team-member-position">Coach développement et électronique</div>
-						</div>
-					</div>
 				</div>-->
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Yannick JOST</h4>
@@ -797,7 +787,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Fabrice LIEGEY">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Fabrice LIEGEY</h4>
@@ -807,7 +797,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/alexis-martin.jpg" alt="Alexis MARTIN">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Alexis MARTIN</h4>
@@ -817,11 +807,21 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Johann MICHEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Johann MICHEL</h4>
 							<div class="team-member-position">Mécatronique, innovation</div>
+						</div>
+					</div>
+				</div>	
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/frederic-mossmann.jpg" alt="Frédéric MOSSMANN">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Frédéric MOSSMANN</h4>
+							<div class="team-member-position">Coach développement et électronique</div>
 						</div>
 					</div>
 				</div>
@@ -832,6 +832,20 @@
 						<div class="team-member-text">
 							<h4 class="team-member-name">Axel NEVEUX</h4>
 							<div class="team-member-position">XFive</div>
+						</div>
+					</div>
+				</div>
+
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/antoine-parmentier.jpg" alt="Antoine PARMENTIER">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Antoine PARMENTIER</h4>
+							<div class="team-member-position">Business Developpement / Marketing</div>
 						</div>
 					</div>
 				</div>
@@ -847,12 +861,8 @@
 					</div>
 				</div>
 
-			</section>
-
-			<section class="team-section section" style="padding-top: 0;">
-
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Florence REMY</h4>
@@ -862,7 +872,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/bestien-stella.jpg" alt="Bastien STELLA">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Bastien STELLA</h4>
@@ -872,7 +882,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/pascal-thisse.jpg" alt="Pascal THISSE">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Pascal THISSE</h4>
@@ -883,31 +893,11 @@
 
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Léo UNBEKANDT</h4>
 							<div class="team-member-position">Scalingo</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Manuel YGUEL</h4>
-							<div class="team-member-position">Strataggem - Objets connectés</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
-							<div class="team-member-position">Fablab INSA</div>
 						</div>
 					</div>
 				</div>
@@ -942,6 +932,29 @@
 					</div>
 				</div>-->
 
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Manuel YGUEL</h4>
+							<div class="team-member-position">Strataggem - Objets connectés</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
+							<div class="team-member-position">Fablab INSA</div>
+						</div>
+					</div>
+				</div>
 			</section>
 
 			<!--<section id="jury" class="team-section section">
