--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<li><a href="#about">A Propos</a></li>
 							<li><a href="#how-it-works">Déroulement</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
-							<li><a href="#coachs">Coachs</a>
+							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<!--<li><a href="#prizes">Prix</a>
 							<li><a href="#winners">Résultats</a>-->
 							<li><a href="#sponsors">Partenaires</a></li>
@@ -957,29 +957,39 @@
 				</div>
 			</section>
 
-			<!--<section id="jury" class="team-section section">
+			<section id="jury" class="team-section section">
 				<div class="container-fluid">
 					
 					<h2 class="section-heading text-center">Le Jury</h2>
 
 					<div class="team-row row">
 
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+						<div class="col-sm-6 col-md-4 col-lg-2 fadeIn animated done-animation" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/jury/birgit-fratzke-weiss.jpg" alt="Birgit FRATZKE-WEISS">
+								<img class="team-member-picture" src="images/contents/jury/philippe-commaret.jpg" alt="Philippe Commaret">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Birgit FRATZKE-WEISS</h4>
-									<div class="team-member-position">Directrice Générale Déléguée du Groupe ÉS</div>
+									<h4 class="team-member-name">Philippe Commaret</h4>
+									<div class="team-member-position">Directeur ÉS Énergies Strasbourg</div>
 								</div>
 							</div>
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/jury/isabelle-hussherr.jpg" alt="Isabelle HUSSHERR">
+								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Roland	DE GUIO">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Isabelle HUSSHERR</h4>
-									<div class="team-member-position">Secrétaire Générale de la Fédération des Industries d’Alsace</div>
+									<h4 class="team-member-name">Roland	DE GUIO</h4>
+									<div class="team-member-position">Professeur à l'INSA Strasbourg, expert en innovation</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/jury/guillaume-ebelmann.jpg" alt="Isabelle HUSSHERR">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Guillaume	EBELMANN</h4>
+									<div class="team-member-position">CEO de WhiteQuest</div>
 								</div>
 							</div>
 						</div>
@@ -1006,20 +1016,10 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/jury/jean-michel-staerle.jpg" alt="Jean-Michel STAERLÉ">
+								<img class="team-member-picture" src="images/contents/jury/lilla-merabet.jpg" alt="Lilla MERABET">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Jean-Michel STAERLÉ</h4>
-									<div class="team-member-position">Responsable du développement Ouest et Nord à l'ADIRA</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/jury/jacques-wolff.jpg" alt="Jacques WOLFF">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Jacques WOLFF</h4>
-									<div class="team-member-position">Président fondateur de l’entreprise Sewosy</div>
+									<h4 class="team-member-name">Lilla MERABET</h4>
+									<div class="team-member-position">Vice-présidente Innovation et Recherche de la Région Grand Est</div>
 								</div>
 							</div>
 						</div>
@@ -1028,7 +1028,7 @@
 
 				</div>
 
-			</section>-->
+			</section>
 
 			<!--<section id="prizes" class="section section-dark">
 				
