--- a/index.html
+++ b/index.html
@@ -1296,9 +1296,7 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">Quel matériel ?</h4>
-								<div class="faq-item-text">Chacun ramène son propre matériel. Le FabLab de l'INSA est partenaire du projet. Il est utilisable en fonction des besoins. La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel pour réaliser des objets connectés et du coaching durant le week-end pour la mise en oeuvre d’objets connectés.
-
-</div>
+								<div class="faq-item-text">Chacun ramène son PC et si possible une multiprise.<br><br><strong>Nos partenaires mettent à disposition un kit technique</strong> : <br> - l'INSA permet l'accès à son FabLab.<br>- La startup Strataggem propose l'accès à la plateforme LoRa Wavebricks, a du matériel électronique pour réaliser des objets connectés et du coaching durant le week-end.<br>- ITS Future et AGORA CALYCE mettent à disposition la plateforme cloud IoT Agora.<br> - Scalingo vous permettra d'héberger vos applications web !</div>
 							</div>
 						</div>
 
@@ -1306,7 +1304,13 @@
 							<div class="faq-item">
 								<span class="faq-item-icon fa fa-question-circle"></span>
 								<h4 class="faq-item-heading">Organisation</h4>
-								<div class="faq-item-text">Le montant de votre participation couvre les repas du vendredi soir au dimanche midi, petit déjeuner compris. Vous pouvez dormir sur place. N'hésitez pas à ramener votre matelas et votre bonnet de nuit.</div>
+								<div class="faq-item-text">Vous devrez règler vos repas pour confirmer votre participation. Vous pouvez dormir sur place. N'hésitez pas à ramener votre matelas et votre bonnet de nuit.</div>
+							</div>
+
+							<div class="faq-item">
+								<span class="faq-item-icon fa fa-question-circle"></span>
+								<h4 class="faq-item-heading">Le hashtag et les réseaux sociaux</h4>
+								<div class="faq-item-text">Faites du bruit autour de l'événement en utilisant le hashtag #HICamp et en mentionnant @AlsaceDigitale et @ES_Strasbourg</div>
 							</div>
 						</div>
 
